--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!doctype html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8"/>
     <link href="/pikachu.png" rel="icon" type="image/svg+xml"/>
     <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-    <title>PokéRandon </title>
+    <title>PokéRandon</title>
 </head>
 <body>
 <div id="root"></div>
